--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 This is HTML slider without html5 range.
+It is very smooth gesture for Mobile Safari.
 
-
+Demo is here - http://yutaro-ihara.github.com/slider-without-html5-range/slider.html
 
 original source from http://blog.livedoor.jp/dankogai/archives/51733122.html
 I published without permission from dankodai.
